# JCTerminal

./: .gitignore  CMakeLists.txt  README.md
JCTerminal/: CMakeLists.txt
JCTerminal/include/: JCTerminal.h
JCTerminal/include/c/: JCTerminal.h
JCTerminal/include/cpp/: JCTerminal.hpp
JCTerminal/source/: JCTerminal.cpp
JCTerminal/source/Callback/: CMakeLists.txt  Callback.cpp  Callback.h
JCTerminal/source/Cell/: Cell.cpp  Cell.h
JCTerminal/source/CellBuffer/: CMakeLists.txt  CellBuffer.cpp  CellBuffer.h
JCTerminal/source/Color/: CMakeLists.txt  Color.h
JCTerminal/source/Interface/: CMakeLists.txt  Interface.h
JCTerminal/source/Interface/c/: Interface_C.cpp
JCTerminal/source/Interface/cpp/: Interface_Cpp.cpp
JCTerminal/source/Opengl/: CMakeLists.txt  Opengl.cpp  Opengl.h
JCTerminal/source/Settings/: CMakeLists.txt  Settings.h
JCTerminal/source/Terminal/: CMakeLists.txt  Terminal.cpp  Terminal.h
JCTerminal/source/Text/: CMakeLists.txt  Font.cpp  Font.h  FontList.cpp  FontList.h  Glyph.h  TextUnits.cpp  TextUnits.h
JCTerminal/source/Text/Freetype/: Freetype.cpp  Freetype.h
JCTerminal/source/Text/Texture/: GlyphTexture.cpp  GlyphTexture.h
JCTerminal/source/Texture/: CMakeLists.txt  GLTextureSheet.cpp  GLTextureSheet.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
JCTerminal/source/Texture/Impl/: Texture.cpp  Texture.h
JCTerminal/source/Window/: CMakeLists.txt  Window.cpp  Window.h
samples/: CMakeLists.txt
samples/temp/: CMakeLists.txt  JCTerminalSample.cpp
source/Text/: Font.cpp  Font.h  Glyph.h  GlyphIterator.cpp  GlyphIterator.h  GlyphString.cpp  GlyphString.h  Text.cpp  Text.h  TextUnits.h
source/Text/Freetype/: Freetype.cpp  Freetype.h
